<resources>
    <string name="app_name">AWARE: MbientLab</string>
    <string name="plugin_template">Plugin: MbientLab</string>

    <string name="no_device_selected_notification_title">No device selected</string>
    <string name="no_device_selected_notification_content">Click here to select a MetaWear device.</string>


    <string name="connection_lost_notification_title">Device disconnected</string>
    <string name="connection_lost_notification_content">Device disconnected</string>

    <string name="connection_successful_notification_title">Connection successful</string>
    <string name="connection_successful_notification_content">Data from MetaWear board is now recorded.</string>

    <string name="connection_failed_notification_title">Connection failed</string>
    <string name="connection_failed_notification_content">Try again or select another device.</string>

    <string name="hello_card_instruction">Click on setting tab to control the plugin.</string>

    <string name="bluetooth_not_available_title">Unable to access bluetooth service</string>
    <string name="bluetooth_not_available_content">Connection with remote device will not be established.</string>

    <string name="select_device_preference_name">Choose device</string>
    <string name="select_device_preference_description">Choose a MetaWear device from the list.</string>

    <string name="force_disconnect_button_title">Disconnect from current board</string>
    <string name="force_disconnect_button_summary">If connected to a board, disconnect from it.</string>

    <string name="select_active_sensors_preference_name">Select active sensors</string>
    <string name="select_active_sensors_preference_description">Select active sensors.</string>

    <string name="accelerometer_sensor_name">Accelerometer</string>
    <string name="altitude_sensor_name">Altitude</string>
    <string name="gyroscope_sensor_name">Gyroscope</string>
    <string name="pressure_sensor_name">Pressure</string>
    <string name="magnetometer_sensor_name">Magnetometer</string>
    <string name="temperature_sensor_name">Temperature</string>

</resources>
