<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="plugin_template"
    android:title="@string/app_name">

    <CheckBoxPreference
        android:key="status_plugin_template"
        android:defaultValue="false"
        android:persistent="true"
        android:summary="Activate/deactivate plugin" />


    <Preference
        android:key="choose_device_pref"
        android:title="@string/select_device_preference_name"
        android:summary="@string/select_device_preference_description">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aware.plugin.template"
            android:targetClass="com.aware.plugin.template.ChooseDeviceActivity"
            />
    </Preference>
    <Preference android:title="@string/force_disconnect_button_title"
        android:key="force_disconnect"
        android:summary="@string/force_disconnect_button_summary" />

    <Preference
        android:key="choose_device_pref"
        android:title="@string/select_active_sensors_preference_name"
        android:summary="@string/select_active_sensors_preference_description">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.aware.plugin.template"
            android:targetClass="com.aware.plugin.template.SelectActiveSensorsActivity"
            />
    </Preference>
</PreferenceScreen>